--- a/Nathan ILS/index.html
+++ b/Nathan ILS/index.html
@@ -58,7 +58,13 @@
     <div class = "card">
         <div id="card content">
                 <h3>ANIME & MANGA</h3>
-                <p>Any rythmn game</p> 
+                <p>Beyond the Boundary</p> 
+                <p>Oregairu</p>
+                <p>Tonikawa</p>
+                <p>Call of the Night</p>
+                <p>Dandadan</p>
+                <p>Solo Leveling</p>
+                <p>Anything popular </p>
         </div>
     </div>
 
