--- a/Nathan ILS/index.html
+++ b/Nathan ILS/index.html
@@ -31,7 +31,7 @@
     <div class = "card">
         <div id="card content">
                 <h3>GAMES</h3>
-                <p>Any rhyth game</p> 
+                <p>Any rhythm game</p> 
                 <p>Blue Archive</p> 
                 <p>Destiny 2</p> 
                 <p>Warframe</p> 
